# arkit2meshroom

./: .gitignore  .gitmodules  README.md
converter/: CMakeLists.txt  README.md  configure.sh  convert.cpp  convert.h  main.cpp  obv_linker.cpp  obv_linker.h  run.sh  utils.h
converter/meshio/: meshio.cpp  meshio.h
process/: README.md  config.py  depth2png.py  requirements.txt  scan_processor.py  utils.py
